# polyref

./: .gitignore  Cargo.toml  LICENSE  README.md  REFERENCE_FORMAT.md  install_hooks.ps1  install_hooks.sh  pyproject.toml  pyrightconfig.json
.claude/: settings.example.json  settings.json
.github/workflows/: ci.yml  release.yml
crate-ref-daemon/: Cargo.toml
crate-ref-daemon/src/: autogen.rs  builder.rs  cache.rs  daemon.rs  hook_types.rs  ipc.rs  lib.rs  main.rs  tools.rs  watcher.rs
crate-ref-daemon/src/index/: mod.rs  persist.rs  types.rs
crate-ref-daemon/src/simhash/: engine.rs  mod.rs  shingles.rs
crate-ref-daemon/tests/: integration_daemon.rs
crate-ref-hook/: Cargo.toml
crate-ref-hook/src/: main.rs
hook/: install_hooks.py  polyref_hook.py  test_hook.py
python/polyref_py/: __init__.py  __main__.py  arg_checker.py  checker.py  cli.py  errors.py  fuzzy.py  import_checker.py  method_checker.py  models.py  output.py  ref_parser.py  source_context.py  type_inference.py
refs/: boto3.polyref  lib_anyhow.rs  lib_serde.rs  lib_tempfile.rs  lib_tokio.rs  pandas.polyref  requests.polyref
refs/rust/: lib_anyhow.rs  lib_chrono.rs  lib_clap.rs  lib_colored.rs  lib_pretty_assertions.rs  lib_regex.rs  lib_serde_json.rs  lib_sha2.rs  lib_similar.rs  lib_tempfile.rs  lib_toml.rs  lib_walkdir.rs
refs/std/: datetime.polyref  json.polyref  os.polyref  pathlib.polyref  std_collections.rs  std_io.rs  std_iter.rs  std_option.rs  std_result.rs  std_string.rs  std_sync.rs  subprocess.polyref  typing.polyref
refs/ts/: axios.polyref  express.polyref  lodash.polyref  react.polyref  zod.polyref
scripts/: enforce-pipeline.sh  install-hook.bat  install-hook.command  install-hook.sh  install.ps1  install.sh  lint-tests.sh  merge_hook.py  post-write-audit.sh  security-check.sh  validate-refs.sh
src/: arg_checker.rs  associated_checker.rs  config.rs  coverage.rs  dirs.rs  enforce.rs  lib.rs  main.rs  model_output.rs  ref_parser_v2.rs  source_context.rs  type_inference.rs  typescript_bridge.rs
src/ast/: mod.rs  rust_ast.rs
src/check/: common.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/commands/: enforce.rs  mod.rs
src/detect/: mod.rs  python.rs  rust.rs  typescript.rs
src/generate/: cache.rs  docsrs.rs  docsrs_format.rs  mod.rs  python.rs  rust.rs  templates.rs  typescript.rs
src/hook/: orchestrator.rs
src/report/: json.rs  mod.rs  terminal.rs
tests/: ast_tests.rs  check_tests.rs  checker_integration_tests.rs  cli_enforce_tests.rs  core_types_tests.rs  coverage_tests.rs  detect_tests.rs  enforce_tests.rs  enforcement_pipeline_tests.rs  final_audit_tests.rs  generate_tests.rs  improvement_tests.rs  integration_enforce_tests.rs  integration_tests.rs  layer_coverage_tests.rs  report_tests.rs  security_check_tests.rs  stdlib_ref_tests.rs  test_merge_hook.py  typescript_bridge_tests.rs
tests/fixtures/: bad_rust_snippets.rs
tests/fixtures/python_project/: main.py  pyproject.toml  requirements.txt
tests/fixtures/python_refs/: lib_requests.py
tests/fixtures/rust_project/: Cargo.toml
tests/fixtures/ts_project/: package.json
tests/fixtures/ts_refs/: lib_react.ts
tests/generation/: code_extractor.py  conftest.py  generation_runner.py  haiku_client.py  model_client.py  stats.py  test_haiku_client.py  test_model_client.py  test_python_detection.py  test_rust_detection.py
tests/python/: test_arg_checker.py  test_checker.py  test_import_checker.py  test_integration.py  test_method_checker.py  test_models.py  test_output.py  test_ref_parser.py  test_source_context.py  test_stdlib_refs.py  test_type_inference.py
tools/polyref-drift/: Cargo.toml  drift-config.toml.example
tools/polyref-drift/src/: config.rs  drift_detector.rs  http_client.rs  lib.rs  main.rs  reporter.rs
tools/polyref-drift/src/registry/: crates_io.rs  mod.rs  npm.rs  pypi.rs
tools/polyref-drift/tests/: config_tests.rs  drift_detector_tests.rs  registry_tests.rs
tools/polyref-gen/: Cargo.toml
tools/polyref-gen/src/: dirs.rs  lib.rs  main.rs  python_gen.rs  python_source_gen.rs  rust_source_gen.rs  rustdoc_gen.rs  scanner.rs  typescript_gen.rs
tools/polyref-gen/tests/: python_gen_tests.rs  rustdoc_gen_tests.rs  typescript_gen_tests.rs
tools/polyref-gen/tests/fixtures/: sample_crate.json  sample_lib.d.ts  sample_module.pyi
typescript/polyref_ts/: jest.config.js  package-lock.json  package.json
(+17 files in other folders)
