[workspace]
members = [".", "crate-ref-daemon", "crate-ref-hook"]
exclude = ["tools/polyref-drift", "tools/polyref-gen"]
resolver = "2"

[package]
name = "polyref"
version = "0.1.0"
edition = "2021"
description = "Multi-language library reference generator and code validator"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
walkdir = "2"
regex = "1"
similar = "2"
strsim = "0.11"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
ureq = "2"
scraper = "0.21"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
