[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyref-py"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rapidfuzz>=3.0",
    "libcst>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
generation = [
    "anthropic>=0.49",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["python/polyref_py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET"]
ignore = ["N818", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/python/fixtures/*" = ["F401", "F841", "E402", "I001"]
"tests/generation/prompts/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests/python", "tests/generation"]
addopts = "--cov=python/polyref_py --cov-report=term-missing"
markers = [
    "unit: fast unit tests, no API calls",
    "generation: tests that call Haiku API (requires ANTHROPIC_API_KEY)",
]
