[package]
name = "crate-ref-hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crate-ref-hook"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Pipes", "Win32_Foundation"] }
