[workspace]

[package]
name = "polyref-drift"
version = "0.1.0"
edition = "2021"
description = "Detect version drift between reference files and upstream registries"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = "2"
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
semver = "1"

[dev-dependencies]
tempfile = "3"
mockito = "1"
