[workspace]

[package]
name = "polyref-gen"
version = "0.1.0"
edition = "2021"
description = "Generate polyref reference files from documentation sources"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
